--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,11 @@ def includeDesktopSupport = false
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+//    compile 'org.a05annex:a05annexUtil:0.8.6'
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile 'org.jetbrains:annotations:17.0.0'
+
     implementation wpi.deps.wpilib()
     nativeZip wpi.deps.wpilibJni(wpi.platforms.roborio)
     nativeDesktopZip wpi.deps.wpilibJni(wpi.platforms.desktop)
