--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,10 @@ dependencies {
     nativeDesktopZip wpi.deps.vendor.jni(wpi.platforms.desktop)
 
     testImplementation 'junit:junit:4.12'
+    testImplementation('org.junit.platform:junit-platform-runner:1.4.2')
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.4.2')
+    testImplementation('org.mockito:mockito-core:3.+')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.4.2')
 
     // Enable simulation gui support. Must check the box in vscode to enable support
     // upon debugging
