--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,7 @@ def includeDesktopSupport = false
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 4.
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-//    compile 'org.a05annex:a05annexUtil:0.8.6'
+    compile 'org.a05annex:a05annexUtil:0.9.1'
     compile 'com.googlecode.json-simple:json-simple:1.1.1'
     compile 'org.jetbrains:annotations:17.0.0'
 
